_generated-doc/2.16/config/quarkus-elasticsearch-restclient-lowlevel-general-config-items.adoc

:summaryTableId: quarkus-elasticsearch-restclient-lowlevel-general-config-items
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-elasticsearch-restclient-lowlevel-general-config-items_configuration]]link:#quarkus-elasticsearch-restclient-lowlevel-general-config-items_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-elasticsearch-restclient-lowlevel-general-config-items_quarkus.elasticsearch.discovery.enabled]]`link:#quarkus-elasticsearch-restclient-lowlevel-general-config-items_quarkus.elasticsearch.discovery.enabled[quarkus.elasticsearch.discovery.enabled]`

[.description]
--
Defines if automatic discovery is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ELASTICSEARCH_DISCOVERY_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ELASTICSEARCH_DISCOVERY_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-elasticsearch-restclient-lowlevel-general-config-items_quarkus.elasticsearch.discovery.refresh-interval]]`link:#quarkus-elasticsearch-restclient-lowlevel-general-config-items_quarkus.elasticsearch.discovery.refresh-interval[quarkus.elasticsearch.discovery.refresh-interval]`

[.description]
--
Refresh interval of the node list.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ELASTICSEARCH_DISCOVERY_REFRESH_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ELASTICSEARCH_DISCOVERY_REFRESH_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`5M`

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
